ajankohtaisten tietojen päivittelyä

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,16 @@
 
 
 
-	<string name="etusivu_teksti">Hei viime kaudella mukana olleet, jotka eivät ole vielä ilmoittautuneet, ilmoittakaa Kaleville, että hankitteko kausikortin vai kertalipun harjoitusten ajaksi.\nPS. Jos sähköposti-info ei tullut perille, ota yhteyttä Kaleviin!\n\nKauden 2014-2015 ryhmien muodostaminen käynnissä. Tarvittaessa ilmottautumiskaavakkeen voit ladata alla olevasta napista painamalla.\n\nJos olit mukana viime kaudella, eivätkä yhteystietosi ole muuttuneet, sinun ei tarvitse täyttää ilmottautumiskaavaketta.\n\nUutena ryhmänä Lautailuryhmä!\n\nTiedustelut Kalevilta!</string>
+	<string name="etusivu_teksti">Kauden 2015 päättäjäiset keskiviikkona 18.3.2015 klo 18.00 Simpsiöllä. Myös vanhemmat tervetulleita!\n\n
+
+Jos sinulla on perinteiset hiihtosukset tai luistelusukset, ota mukaan (myös monot), luvassa hauskaa toimintaa!\n\n
+
+Tarjolla makkaraa, limsaa jne.\n
+
+Ps. jätä hiihtosauvat kotiin, mutta muista normaalit treenivarusteet mukaan(sukset, monot, sauvat, tai lautakengät ja lauta).
+
+
+Tarvittaessa ilmottautumiskaavakkeen voit ladata alla olevasta napista painamalla.\n\n\nMeillä on myös Lautailuryhmä!\n\nTiedustelut Kalevilta!</string>
 
     <string name="etusivu_nappi">Ajankohtaista</string>
 
